--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+gem "github-pages", group: :jekyll_plugins
 
+title: Md Shahriar Hossain
+description: Greetings! I’m Shahriar Hossain, an MSc student at BUET (Bangladesh University of Engineering and Technology). My academic voyage revolves around the captivating world of fluid dynamics, where I unravel the intricate dance of liquids and gases.
